@@ -5,6 +5,7 @@
 	Context menu edit keyword completion
 	Updated program icon
 	Editor line number widget can be used for scrolling
+	Updated editor help display
 
 2015-08-26
 	Editor fixes:
